edit url person photo

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <div class="wrap">
     <div class="card">
       <div class="card__header">
-        <img class="card__photo" src="../images/image-victor.jpg" alt="photo person">
+        <img class="card__photo" src="./images/image-victor.jpg" alt="photo person">
       </div>
       <div class="card__data">
         <div class="flex--row">
