using before:: & after:: elements

--- a/index.html
+++ b/index.html
@@ -24,26 +24,26 @@
       </div>
       <div class="card__data">
         <div class="flex--row">
-          <div class="card__data--name">Victor Crest</div>
-          <div class="card__data--age">26</div>
+          <h1 class="card__data--name">Victor Crest</h1>
+          <p class="card__data--age">26</p>
         </div>
-        <div class="card__data--location">London</div>
+        <h2 class="card__data--location">London</h2>
       </div>
 
       <div class="card__statistics">
         <div class="card__section">
-          <div class="card__section--count">80K</div>
-          <div class="card__section--title">Followers</div>
+          <p class="card__section--count">80K</p>
+          <p class="card__section--title">Followers</p>
         </div>
 
         <div class="card__section">
-          <div class="card__section--count">803K</div>
-          <div class="card__section--title">Likes</div>
+          <p class="card__section--count">803K</p>
+          <p class="card__section--title">Likes</p>
         </div>
 
         <div class="card__section">
-          <div class="card__section--count">1.4K</div>
-          <div class="card__section--title">Photos</div>
+          <p class="card__section--count">1.4K</p>
+          <p class="card__section--title">Photos</p>
         </div>
       </div>
     </div>
